Author: Gabriele Bertoli <gbertoli@cern.ch>
Date:   Mon Oct 19 17:59:20 2015 +0200

    MiniReaderAlg.h: Minor style adjustments

Author: Gabriele Bertoli <gbertoli@cern.ch>
Date:   Tue Jul 7 18:28:07 2015 +0200

    plotJetEfficiency.cxx: Deprecating old plotJetEfficiency.cxx in favor of the
    new that reads the new naming convention for the histograms.

Author: Gabriele Bertoli <gbertoli@cern.ch>
Date:   Tue Jul 7 18:26:29 2015 +0200

    MiniReaderSelectionCuts.h: Changed cut values for the Jet efficiency studies.
    
    -  static constexpr const int N_JETS = 5; // WARNING this should be 5
    +  static constexpr const int N_JETS = 999; // WARNING this should be 5
       static constexpr const float DPHI_JETMET = .4;
    -  static constexpr const float MET_HARD = 400000.;
    -  static constexpr const float JET_PT_HARD = 400000.; // Changed from 400000 to study asymmetric cuts
    +  static constexpr const float MET_HARD = 250000.;
    +  static constexpr const float JET_PT_HARD = 250000.; // Changed from 400000 to study asymmetric cuts

Author: Gabriele Bertoli <gbertoli@cern.ch>
Date:   Tue Jul 7 18:14:26 2015 +0200

    SensitivityPlot.cxx: Scaling to 1fb^-1 the parametrization for the systematics,
    fixed marking of best cut in output log file.
    
    -      if(std::fabs(m_effS_vec[i] - max_pos) < .0001)
    +      if(std::fabs(m_effS_vec[i] - max_pos) < .005)
    
    in SistParam() multiplied by sqrt(5) to scale the systematic values calculated
    for 5fb^-1 to 1fb^-1.

Author: Gabriele Bertoli <gbertoli@cern.ch>
Date:   Tue Jul 7 18:00:50 2015 +0200

    MiniReaderAlg.h, MiniReaderAlg.cxx: Moving objects tuples to appropriate
    classes.
    
    Moved the tuples containing the objects belonging to different classes to pass
    to the histo filling functions in the header of the appropriate class.

Author: Gabriele Bertoli <gbertoli@cern.ch>
Date:   Tue Jul 7 17:44:13 2015 +0200
