@@ -11,7 +11,7 @@ MiniReaderCrossSection::MiniReaderCrossSection()
   m_process_kfactor13 = 0;
   m_process_eff13 = 0;
   m_process_xsrelunc13 = 0;
-  m_process_name13 = 0;
+  // m_process_name13 = 0;
 }
 
 void MiniReaderCrossSection::ReadCrossSectionBranches(TTree *tree)
@@ -25,5 +25,5 @@ void MiniReaderCrossSection::ReadCrossSectionBranches(TTree *tree)
   tree->SetBranchAddress("process_kfactor13", &m_process_kfactor13);
   tree->SetBranchAddress("process_eff13", &m_process_eff13);
   tree->SetBranchAddress("process_xsrelunc13", &m_process_xsrelunc13);
-  tree->SetBranchAddress("process_name13", &m_process_name13);
+  // tree->SetBranchAddress("process_name13", &m_process_name13);
 }
